@@ -4,6 +4,7 @@
 	* No error message from info pane
 	* Hide motherboard vendor if it is empty
 	* Clean Nautilus thumbnail image cache in setting pane
+	* Use custom window titlebar layout in setting pane
 
 2010-10-03 Homer Xing <homer.xing@gmail.com>
 
